# projectionmapanything-vj-tools

./: .gitignore  AGENTS.md  AutoProjectionMap.md  CLEAN_INSTALL.md  DEBUG.md  INSTALL.md  README.md  clarification-harvest.skill  install_on_runpod.sh  pyproject.toml
clarification-harvest/: SKILL.md
clarification-harvest/references/: database-questions.md  deployment-questions.md  web-api-questions.md
src/scope_depth/: __init__.py  plugin.py
src/scope_depth/calibration/: __init__.py  calibrator.py  display.py  storage.py
src/scope_depth/pipelines/: __init__.py  pipeline.py  schema.py
