[project]
name = "projectionmapanything-vj-tools"
version = "0.1.0"
description = "Projection mapping depth estimation plugin for Daydream Scope with ProCam calibration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["daydream", "scope", "plugin", "depth", "projection-mapping", "vj", "tools", "procam"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.33.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.entry-points."scope"]
scope_depth = "scope_depth.plugin"

[project.urls]
Homepage = "https://github.com/yourusername/projectionmapanything-vj-tools"
Repository = "https://github.com/yourusername/projectionmapanything-vj-tools"
Issues = "https://github.com/yourusername/projectionmapanything-vj-tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_depth"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
